# foundational-data-science-for-python

./: .gitignore  .gitmodules  .markdownlint.json  .nojekyll  .pre-commit-config.yaml  README.md  _quarto.yml  index.html  index.md  index.qmd  postBuild  pyproject.toml  search.json
.github/workflows/: cleanup.yml  publish.yml
1-learning-python-in-a-notebook-environment/Chapter_01/: Chapter_01.html  Chapter_01.ipynb  Chapter_01.md
1-learning-python-in-a-notebook-environment/Chapter_02/: Chapter_02.html  Chapter_02.ipynb  Chapter_02.md  Chapter_02.qmd
1-learning-python-in-a-notebook-environment/Chapter_03/: Chapter_03.html  Chapter_03.ipynb  Chapter_03.md
1-learning-python-in-a-notebook-environment/Chapter_04/: Chapter_04.html  Chapter_04.ipynb  Chapter_04.md  Chapter_04.qmd
1-learning-python-in-a-notebook-environment/Chapter_05/: Chapter_05.html  Chapter_05.ipynb
1-learning-python-in-a-notebook-environment/Chapter_06/: Chapter_06.html  Chapter_06.ipynb  Chapter_06.md
1_learning-python-in-a-notebook-environment/: Chapter_05.ipynb  Chapter_05.md  Chapter_05.qmd
1_learning-python-in-a-notebook-environment/Chapter_01/: Chapter_01.html  Chapter_01.ipynb  Chapter_01.md  Chapter_01.qmd
1_learning-python-in-a-notebook-environment/Chapter_02/: Chapter_02.html  Chapter_02.ipynb  Chapter_02.md
2-data-science-libraries/Chapter_07/: Chapter_07.qmd  (+2 more)
Chapter_01/: Chapter_01.html  Chapter_01.ipynb  Chapter_01.md  Chapter_01.qmd
Chapter_02/: Chapter_02.html  Chapter_02.ipynb  Chapter_02.md  Chapter_02.qmd
Chapter_03/: Chapter_03.ipynb  Chapter_03.md  Chapter_03.qmd
(+329 files in other folders)
