[project]
name = "foundational-data-science-for-python"
version = "0.1.0"
description = "A collection of notes and code examples for the book Foundational Python for Data Science by Kennedy Behrman"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.9.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pooch>=1.9.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.6.0",
    "pre-commit-uv>=4.2.1",
    "quarto-cli>=1.9.38",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.ruff]
extend-exclude = [".jupyter", "*.ipynb"]
